--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ li:hover{
 }
 
 .banner-3{
-    background-image: url('https://static.wikia.nocookie.net/batman/images/b/b7/Gordon-0.jpg/revision/latest?cb=20210518231553');
+    background-image: url('../img/banner-3-gordon.webp');
 }
 
 footer{
